--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Cadoz Olivier - Web developer junior - Curriculum vitae</title>
+    <title>Cadoz Olivier - Developer Front-End - Curriculum vitae</title>
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
@@ -15,42 +15,40 @@
         <h1>OLIVIER CADOZ</h1>
       </div>
       <div class="job">
-        <h2>WEB DEVELOPER JUNIOR</h2>
-        <h2>English/French</h2>
+        <h2>DEVELOPPEUR FRONT-END</h2>
+        <h2>Anglais/Français</h2>
       </div>
       <div class="photo">
         <img src="images/cadozOlivier.jpg" alt="Olivier Cadoz" />
       </div>
       <div class="content">
         <div class="experience">
-          <h3>Experience</h3>
+          <h3>Expériences</h3>
           <div class="elementExp">
             <p>
               2016
             </p>
             <h4>Simplon</h4>
-            <h5>Presenter</h5>
+            <h5>Animateur</h5>
             <p>
-              Presentation and animation of the softwares Scratch and HourOfCode.
+              Présentation et animation des logiciels Scratch et HourOfCode.
             </p>
           </div>
           <div class="aboutMe">
-            <h3>ABOUT ME</h3>
+            <h3>A propos de moi</h3>
             <p>
-              I'm <strong>Olivier</strong>
+               <strong>Olivier</strong>
             </p>
             <p>
-              a web developer junior
-            </p>
-            <p>
-              from France
+              Développeur Front-End
             </p>
             <p class="description">
-              I studied programing and web developement at Simplon, a young
-              startup located at Montreuil - near Paris - but not unknown in
-              the world of digital technology. I'm interested in design and
-              developement and I'm pretty enthousiastic to work in web design
-              in the futur.
+              J'ai étudié et découvert la programmation à Simplon, une jeune
+              start-up située à Montreuil, permettant l'accessibilité du savoir
+              du développement web et des applications mobiles. Je suis intéressé
+              par le Front-end et le design, j'aime l'intégration et je serai
+              très enthousiaste de travailler dans la visualisation de data dans
+               le futur.
             </p>
           </div>
         </div>
@@ -58,16 +56,16 @@
           <h3>Education</h3>
           <div class="elementEduc">
             <p>
-              january/august 2016
+              janvier/août 2016
             </p>
-            <h4>Web developement</h4>
+            <h4>Développement web</h4>
             <p>
               Simplon - Montreuil
             </p>
           </div>
           <div class="skills">
             <div class="skillsName">
-              <h3>SKILLS</h3>
+              <h3>Compétences</h3>
 
               <div class="skillScale">
                 <p>HTML (5)</p>
