--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </p>
             <p class="description">
               J'ai étudié et découvert la programmation à Simplon, une jeune
-              start-up située à Montreuil, permettant l'accessibilité du savoir
+              start-up située à Montreuil, permettant l'accessibilité au savoir
               du développement web et des applications mobiles. Je suis intéressé
               par le Front-end et le design, j'aime l'intégration et je serai
               très enthousiaste de travailler dans la visualisation de data dans
