--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <p>JQUERY</p>
                 <div class="scaleFull"></div>
                 <div class="scaleFull"></div>
-                <div class="scaleEmpty"></div>
+                <div class="scaleFull"></div>
                 <div class="scaleEmpty"></div>
                 <div class="scaleEmpty"></div>
               </div>
@@ -122,10 +122,19 @@
               </div>
 
               <div class="skillScale">
-                <p>GITHUB</p>
+                <p>PHP</p>
                 <div class="scaleFull"></div>
                 <div class="scaleFull"></div>
                 <div class="scaleEmpty"></div>
+                <div class="scaleEmpty"></div>
+                <div class="scaleEmpty"></div>
+              </div>
+
+              <div class="skillScale">
+                <p>GITHUB</p>
+                <div class="scaleFull"></div>
+                <div class="scaleFull"></div>
+                <div class="scaleFull"></div>
                 <div class="scaleEmpty"></div>
                 <div class="scaleEmpty"></div>
               </div>
