--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                le futur.
             </p>
           </div>
+          <div class="production">
+            <h3>Production</h3>
+            <p>
+              <a href="https://oliviercadoz.github.io/Portfolio-Olivier/" target="_blank">-> Mon Portfolio</a>
+            </p>
+          </div>
         </div>
         <div class="education">
           <h3>Education</h3>
@@ -158,6 +164,7 @@
               <p>
                 <a href="https://github.com/OlivierCadoz"><i class="fa fa-github-square fa-lg"></i> github.com/OlivierCadoz</a>
               </p>
+
             </div>
           </div>
         </div>
